糗百视频抓取

--- a/MyCrawler/App.config
+++ b/MyCrawler/App.config
@@ -6,8 +6,9 @@
   <appSettings>
     <add key="DataPath" value="E:\study\Crawler\Error\"/>
     <add key="TencentClassUrl" value=""/><!--https://ke.qq.com-->
-    <add key="ImagePath" value="E:\study\WeChatApplet\pages\resource\headImg\"/>
-    <add key="VideoPath" value="E:\study\WeChatApplet\pages\resource\video\"/>
+    <add key="HeadImagePath" value="E:\study\Crawler\WeChatTest\f\headImg\"/>
+    <add key="ContentImagePath" value="E:\study\Crawler\WeChatTest\f\contentImg\"/>
+    <add key="VideoPath" value="E:\study\Crawler\WeChatTest\f\video\"/>
   </appSettings>
   <connectionStrings>
     <add name="conn" connectionString="Data Source=.; Database=Test; User ID=sa; Password=123; MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
